still trying to fix mobile whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,12 @@ font-family: 'Press Start 2P', cursive;
 font-family: 'Ubuntu Mono', monospace;
 */
 /* tags */
-html {
-  min-height: 100%;
-  position: relative;
-}
-
-body {
-  margin: 0;
-  overflow-x: hidden;
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 body > h1 {
